plugins {
    id 'java'
    id 'war'
    id 'eclipse-wtp'
    id 'org.gretty' version '3.1.4'
}

group = 'com.rtest'
version = '1.0.0'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

ext {
    springVersion = '4.3.18.RELEASE'
}

dependencies {
    // Spring Framework
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"
    
    // MyBatis
    implementation 'org.mybatis:mybatis:3.4.6'
    implementation 'org.mybatis:mybatis-spring:1.3.2'
    
    // Oracle JDBC Driver
    implementation 'com.oracle.database.jdbc:ojdbc8:12.2.0.1'
    
    // Apache Commons DBCP for Connection Pooling
    implementation 'org.apache.commons:commons-dbcp2:2.5.0'
    
    // Servlet & JSP
    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
    compileOnly 'javax.servlet.jsp:jsp-api:2.2'
    implementation 'javax.servlet:jstl:1.2'
    
    // Logging
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    
    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
}

gretty {
    servletContainer = 'tomcat85'
    httpPort = 5000
    contextPath = '/'
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
        '--add-opens', 'java.rmi/sun.rmi.transport=ALL-UNNAMED'
    ]
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

war {
    archiveFileName = 'r-test-001.war'
}

eclipse {
    project {
        name = 'r-test-001'
        comment = 'Spring MVC + MyBatis + Oracle Web Application'
        natures 'org.eclipse.jdt.core.javanature',
                'org.eclipse.wst.common.project.facet.core.nature',
                'org.eclipse.wst.common.modulecore.ModuleCoreNature',
                'org.eclipse.jem.workbench.JavaEMFNature'
        buildCommand 'org.eclipse.jdt.core.javabuilder'
        buildCommand 'org.eclipse.wst.common.project.facet.core.builder'
        buildCommand 'org.eclipse.wst.validation.validationbuilder'
    }
    
    classpath {
        downloadSources = true
        downloadJavadoc = false
        
        defaultOutputDir = file('build/classes/java/main')
        
        containers 'org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5'
        
        file {
            whenMerged { classpath ->
                classpath.entries.findAll { 
                    it.kind == 'lib' && it.path.contains('servlet-api')
                }*.exported = false
                
                classpath.entries.findAll { 
                    it.kind == 'lib' && it.path.contains('jsp-api')
                }*.exported = false
            }
        }
    }
    
    wtp {
        facet {
            facet name: 'jst.web', version: '3.1'
            facet name: 'jst.java', version: '1.8'
        }
        
        component {
            contextPath = '/'
            deployName = 'r-test-001'
            
            resource sourcePath: 'src/main/webapp', deployPath: '/'
            resource sourcePath: 'src/main/java', deployPath: '/WEB-INF/classes'
            resource sourcePath: 'src/main/resources', deployPath: '/WEB-INF/classes'
        }
    }
}
